--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="/static/source/fonts/stylesheet.css">
-    <link rel="stylesheet" href="/static/source/pages/index/index.css">
+    <link rel="stylesheet" href="/static/source/pages/portfolio/index.css">
 </head>
 <body>
 
@@ -17,12 +17,12 @@
                     Архітектура
                 </a>
             </div>
-            <div class="header_sections after_logo">
+            <div class="header_sections">
                 <a href="#">
                     Дизайн
                 </a>
             </div>
-            <div class="header_sections">
+            <div class="header_sections after_logo">
                 <a href="#">
                     Портфоліо
                 </a>
@@ -60,7 +60,7 @@
         </div>
     </header>
 
-    <section class="top first_padding" style="background: url(/static/source/img/index/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
+    <section class="top first_padding" style="background: url(/static/source/img/portfolio/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
         <div class="top_social">
             <div class="top_social__line top_social__line_1">
             </div>
@@ -94,18 +94,10 @@
                             Замовити проект
                         </a>
                     </div>
-                    <div class="top_img__block_2">
-                        <div class="top_img__block_2_wrapper">
-                            <div class="block__text">
-                                Ми створюємо затишок на кожній 
-                                вуличці та у кожній квартирі чи будинку
-                            </div>
-                            <img src="/static/source/img/index/Rectangle 5.png" alt="">
-                        </div>
-                        <div class="block__text_2">
-                            <b>INNEX</b> - молода та перспективна команда архітекторів та дизайнерів. 
-                            Вишуканий чи лаконічний дизайн інтер’єру, 
-                            багатоповерхівка чи приватний будинок - усе це, і навіть більше, до снаги нашим фахівцям.
+                    <div class="top_img__block_3">
+                        <div class="top_img__block_3_wrapper">
+                            <img src="/static/source/img/portfolio/Rectangle 5.png" class="img1" alt="">
+                            <img src="/static/source/img/portfolio/Rectangle 41.png" class="img2" alt="">
                         </div>
                     </div>
                 </div>
@@ -113,68 +105,30 @@
         </div>
     </section>
 
-    <section class="top_img container">
-        <div class="top_img__block_1">
-            <img src="/static/source/img/index/Rectangle 7.png" alt="">
+    <section>
+        <div class="block_img__item">
+            <img src="/static/source/img/portfolio/Rectangle 5 (1).png" alt="">
         </div>
-        
+        <div class="block_img__item">
+            <img src="/static/source/img/portfolio/Rectangle 40.png" alt="">
+        </div>
+        <div class="block_img">
+            <div class="block_img__item">
+                <img src="/static/source/img/portfolio/Rectangle 35.png" alt="">
+            </div>
+            <div class="block_img__item">
+                <img src="/static/source/img/portfolio/Rectangle 38.png" alt="">
+            </div>
+            <div class="block_img__item">
+                <img src="/static/source/img/portfolio/Rectangle 37.png" alt="">
+            </div>
+            <div class="block_img__item">
+                <img src="/static/source/img/portfolio/Rectangle 39.png" alt="">
+            </div>
+        </div>
     </section>
 
-    <section class="steps container">
-        <div class="steps__title">
-            Етапи роботи
-        </div>
-        <div class="steps_wrapper">
-            <div class="steps_item">
-                <div class="steps_item__img">
-                    <div class="steps_item__number">1</div>
-                    <img src="/static/source/img/index/stages-work/Rectangle 12.png" alt="">
-                </div>
-                <div class="steps_item__text">
-                    Наш менеджер зв’жеться із вами, для обговорення та узгодження усіх деталей
-                </div>
-            </div>
-            <div class="steps_item">
-                <div class="steps_item__img">
-                    <div class="steps_item__number">2</div>
-                    <img src="/static/source/img/index/stages-work/Rectangle 12 (1).png" alt="">
-                </div>
-                <div class="steps_item__text"> 
-                    Зустріч із дизайнерами чи архітекторами безпосередньо на об’єкті
-                </div>
-            </div>
-            <div class="steps_item">
-                <div class="steps_item__img">
-                    <div class="steps_item__number">3</div>
-                    <img src="/static/source/img/index/stages-work/Rectangle 12 (2).png" alt="">
-                </div>
-                <div class="steps_item__text">
-                    Підписання договору про співпрацю
-                </div>
-            </div>
-            <div class="steps_item">
-                <div class="steps_item__img">
-                    <div class="steps_item__number">4</div>
-                    <img src="/static/source/img/index/stages-work/Rectangle 13.png" alt="">
-                </div>
-                <div class="steps_item__text">
-                    Створення та реалізація унікального проєкту командою INNEX
-                </div>
-            </div>
-        </div>
-        <div class="steps_btn">
-            <div class="steps_btn__block">
-                <a href="#" class="btn_standart">
-                    Замовити проект
-                </a>
-            </div>
-            <div class="steps_btn__block portfolio__btn">
-                <a href="#">
-                    Наше портфоліо
-                </a>
-            </div>
-        </div>
-    </section>
+    
 
     <footer class="footer">
         <div class="footer_title">
@@ -269,7 +223,7 @@
         </div>
     </footer>
     
-    <script src="/static/source/pages/index/index.js"></script>
+    <script src="/static/source/pages/portfolio/index.js"></script>
 
 </body>
 </html>
