--- a/templates/team.html
+++ b/templates/team.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="top_img container">
-                <div>
+                <div style="position: relative; top: -150px;">
                     <img src="/static/source/img/team/Frame 72.png" alt="">
                     <div>
                         <img src="/static/source/img/index/Rectangle 4.svg" alt="">
