--- a/static/development/components/common_componentc/top/index.scss
+++ b/static/development/components/common_componentc/top/index.scss
@@ -1,25 +1,23 @@
 .top {
-    //height: 45.5vw;
-    min-height: 400px;
+    @media (max-width: 992px) {
+        height: 550px
+    }
     width: 100%;
     position: relative;
-    //overflow: hidden;
+    height: 750px;
     &_title {
-        @media (max-width: 1400px) {
-            padding: 10% 20%;
+        @media (max-width: 1200px) {
+            left: 20%;
         }
-        @media (max-width: 900px) {
-            padding: 10% 15%;
-        }
-        @media (max-width: 600px) {
-            padding: 5% 10%;
-        }
-        @media (max-width: 600px) {
-            padding: 2% 5%;
+        @media (max-width: 992px) {
+            top: 100px;
+            //left: 20%;
         }
         color: #FFFFFF;
-        padding: 10% 28%;
         text-align: center;
+        position: absolute;
+        top: 300px;
+        left: 30%;
         &_wrapper {
             display: flex;
             flex-direction: column;
