--- a/static/development/components/pages/portfolio/index.scss
+++ b/static/development/components/pages/portfolio/index.scss
@@ -1,5 +1,5 @@
 .block_img {
-    margin-top: 150px;
+    //margin-top: 150px;
     display: flex;
     flex-wrap: wrap;
     &__item {
@@ -8,5 +8,61 @@
             width: 100%;
             height: 100%;
         }
+    }
+   
+}
+
+.block_1 {
+    @media (max-width: 700px) {
+        margin-bottom: 10px;
+    }
+    display: flex;
+    margin-bottom: 20px;
+    max-height: 1000px;
+    &_wrapper {
+        width: 50%;
+
+        .block_img__item1 {
+            @media (max-width: 700px) {
+                padding-right: 10px;
+                padding-top: 10px;
+            }
+            height: 50%;
+            padding-right: 20px;
+            padding-top: 20px;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .block_img__item2 {
+            height: 50%;
+        }
+        .img100 {
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .img80 {
+            @media (max-width: 700px) {
+                padding-bottom: 10px;
+            }
+            padding-bottom: 20px;
+            img {
+                @media (max-width: 500px) {
+                    width: 100%;
+                }
+                width: 80%;
+                height: 100%;
+            }
+        }
+    }
+    .block_relative {
+        @media (max-width: 700px) {
+            margin-top: -100px;
+        } 
+        margin-top: -250px;
+        z-index: 2;
     }
 }
