--- a/static/source/pages/contacts/index.css
+++ b/static/source/pages/contacts/index.css
@@ -915,4 +915,513 @@ input::-webkit-inner-spin-button {
   align-items: center;
   width: 100%;
   justify-content: space-between; }
-  .modal_btn__block .regist
+  .modal_btn__block .register {
+    border: 1px solid; }
+
+.modal__btn-center {
+  display: flex;
+  justify-content: center; }
+
+.modal_new_user {
+  text-transform: uppercase; }
+
+.modal .mailing {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px; }
+  .modal .mailing_choice {
+    display: flex; }
+    .modal .mailing_choice__item {
+      margin-right: 20px; }
+
+.modal_auth-social {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  .modal_auth-social__title {
+    color: #828282;
+    font-size: 14px; }
+  .modal_auth-social a {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    color: black; }
+    .modal_auth-social a img {
+      margin-right: 5px; }
+
+@media (max-width: 480px) {
+  .modal_btn__block {
+    flex-direction: column; }
+    .modal_btn__block .modal_btn {
+      width: 100%;
+      margin-bottom: 10px; }
+    .modal_btn__block .modal_open {
+      width: 100%; }
+  .modal_title {
+    justify-content: flex-start;
+    padding-right: 30px; }
+  .modal__block {
+    padding: 15px; }
+  .modal_form {
+    padding-top: 0px;
+    margin-top: 10px; } }
+
+.input_section {
+  margin-bottom: 30px; }
+  .input_section__title {
+    color: #333333;
+    font-size: 14px;
+    margin: 0 0 5px 25px; }
+  .input_section input {
+    width: 100%;
+    border: 1px solid #E0E0E0;
+    border-radius: 8px;
+    box-sizing: border-box;
+    height: 48px;
+    padding: 15px 24px; }
+  .input_section textarea {
+    width: 100%;
+    border: 1px solid #F2F2F2;
+    padding: 15px 24px;
+    box-sizing: border-box; }
+
+.category_main .category__block {
+  margin: 20px; }
+
+.category_main .category_item {
+  margin-right: 20px; }
+
+.category_index .category__block {
+  height: 535px; }
+
+.category_index .category_item {
+  margin: 5px; }
+
+.category__block {
+  height: 360px;
+  display: flex;
+  margin: 0 5px; }
+
+.category_item {
+  position: relative;
+  height: 100%;
+  cursor: pointer;
+  overflow: hidden; }
+  .category_item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+  .category_item__wrapper .category_item {
+    width: calc(100% - 10px);
+    height: 262px;
+    margin-bottom: 10px; }
+  .category_item_33procent {
+    width: calc(33.3% - 10px); }
+  .category_item_50procent {
+    width: calc(50% - 10px); }
+  .category_item_66procent {
+    width: calc(66.6% - 10px); }
+  .category_item:hover .category_content, .category_item:hover:after {
+    top: 0; }
+  .category_item:after {
+    transition: all .2s;
+    z-index: 0;
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.612); }
+
+.category_content {
+  z-index: 1;
+  transition: all .2s;
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 30px 40px;
+  top: 110%;
+  left: 0; }
+  .category_content_link {
+    transition: all .2s;
+    padding: 20px 10px;
+    height: fit-content;
+    width: fit-content;
+    padding-bottom: 5px;
+    border-bottom: 1px solid transparent;
+    transform: scale(0.9); }
+    .category_content_link:hover {
+      transform: scale(1);
+      border-bottom: 1px solid #CF1A20; }
+
+.category_hint {
+  position: absolute;
+  bottom: 0;
+  background: #fff;
+  padding: 20px 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+@media (max-width: 1300px) {
+  .category_content {
+    padding: 10px 20px; } }
+
+@media (max-width: 992px) {
+  .category_index .category__block {
+    flex-direction: column;
+    height: auto; }
+  .category_item__wrapper {
+    display: flex;
+    align-items: center;
+    width: 100%; }
+    .category_item__wrapper .category_item {
+      margin-bottom: 5px; }
+  .category_content {
+    display: none; }
+  .category_item {
+    width: 100%;
+    height: 282px; }
+    .category_item:after {
+      display: none; }
+    .category_item:hover .category_content, .category_item:hover:after {
+      top: 120%; } }
+
+@media (max-width: 500px) {
+  .category_item img {
+    padding-bottom: 60px; }
+  .category_hint {
+    right: unset !important;
+    left: 0 !important;
+    width: 100%; } }
+
+@media (max-width: 400px) {
+  .category_item__wrapper {
+    display: flex;
+    flex-direction: column; }
+    .category_item__wrapper .category_item {
+      width: 100%; } }
+
+.header {
+  position: fixed;
+  top: 0;
+  background: #1F1B20;
+  z-index: 100; }
+  @media (max-width: 992px) {
+    .header {
+      padding: 0; } }
+  .header_main {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    @media (max-width: 992px) {
+      .header_main {
+        display: none;
+        position: fixed;
+        flex-direction: column;
+        top: 104px;
+        background: black;
+        width: 90%;
+        height: 100%; }
+        .header_main.active {
+          display: flex; } }
+  .header_mob {
+    display: none; }
+    @media (max-width: 992px) {
+      .header_mob {
+        display: flex; } }
+  .header_sections a {
+    color: #828282;
+    font-size: 15px;
+    line-height: 18px;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+    font-weight: 300; }
+    @media (max-width: 992px) {
+      .header_sections a {
+        color: #F2C94C; } }
+    .header_sections a:hover {
+      color: #FFFFFF;
+      border-bottom: 1px solid #F2C94C; }
+  .header_logo {
+    padding: 10px 0 12px 0; }
+    @media (max-width: 992px) {
+      .header_logo {
+        margin: 0 auto; } }
+  .header_hamburger {
+    overflow: hidden;
+    position: relative;
+    margin-left: 30px;
+    top: 30px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .header_line {
+    transition: all .2s;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    border-radius: 18px;
+    margin: 4px 0;
+    cursor: pointer;
+    background: #F2C94C; }
+    .header_line_1 {
+      top: 10px; }
+    .header_line_2 {
+      top: 22px; }
+    .header_line_3 {
+      top: 34px; }
+
+.header.active .header_line_1 {
+  top: 22px;
+  transform: rotate(45deg); }
+
+.header.active .header_line_2 {
+  left: -100px; }
+
+.header.active .header_line_3 {
+  top: 22px;
+  transform: rotate(-45deg); }
+
+.footer_title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px 0 27px 0; }
+  .footer_title__text {
+    font-size: 30px;
+    line-height: 35px;
+    text-transform: uppercase;
+    color: #1F1B20;
+    font-weight: 500;
+    text-align: center;
+    margin-right: 35px; }
+
+.footer__img {
+  display: flex; }
+  .footer__img img {
+    width: 20%; }
+
+.footer_bottom {
+  background: #1F1B20;
+  display: flex; }
+  @media (max-width: 992px) {
+    .footer_bottom {
+      flex-direction: column; } }
+  .footer_bottom .google_maps {
+    width: 50%; }
+    @media (max-width: 992px) {
+      .footer_bottom .google_maps {
+        width: 100%;
+        height: 400px; } }
+    .footer_bottom .google_maps iframe {
+      width: 100%;
+      height: 100%; }
+  .footer_bottom_right {
+    width: 50%; }
+    @media (max-width: 992px) {
+      .footer_bottom_right {
+        width: 100%; } }
+    .footer_bottom_right .contacts_info {
+      padding: 10% 20%; }
+      .footer_bottom_right .contacts_info_section {
+        display: flex;
+        align-items: center; }
+        .footer_bottom_right .contacts_info_section img {
+          margin-right: 30px; }
+        .footer_bottom_right .contacts_info_section__text {
+          font-size: 18px;
+          line-height: 21px;
+          color: #FFFFFF;
+          font-weight: 300; }
+    .footer_bottom_right .contact_us {
+      text-align: center; }
+    .footer_bottom_right .sections_container {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 40px; }
+      @media (max-width: 600px) {
+        .footer_bottom_right .sections_container {
+          flex-direction: column;
+          align-items: center; } }
+      .footer_bottom_right .sections_container__item {
+        margin-right: 10px; }
+        .footer_bottom_right .sections_container__item a {
+          color: #828282;
+          font-size: 15px;
+          line-height: 18px;
+          text-transform: uppercase;
+          padding-bottom: 10px;
+          font-weight: 300; }
+    .footer_bottom_right .sw-logo {
+      text-align: center;
+      margin-top: 40px; }
+
+.top {
+  width: 100%;
+  position: relative;
+  height: 750px; }
+  @media (max-width: 992px) {
+    .top {
+      height: 550px; } }
+  .top_title {
+    color: #FFFFFF;
+    text-align: center;
+    position: absolute;
+    top: 300px;
+    left: 30%; }
+    @media (max-width: 1200px) {
+      .top_title {
+        left: 20%; } }
+    @media (max-width: 992px) {
+      .top_title {
+        top: 100px; } }
+    .top_title_wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start; }
+    .top_title_1 {
+      font-size: 90px;
+      line-height: 105px;
+      white-space: nowrap;
+      font-weight: bold;
+      text-transform: uppercase; }
+      @media (max-width: 900px) {
+        .top_title_1 {
+          font-size: 50px; } }
+      @media (max-width: 600px) {
+        .top_title_1 {
+          font-size: 30px; } }
+    .top_title_1-white {
+      font-size: 90px;
+      line-height: 105px;
+      white-space: nowrap;
+      font-weight: bold;
+      text-transform: uppercase; }
+      .top_title_1-white span {
+        opacity: 0.2; }
+    .top_title_2 {
+      font-size: 30px;
+      line-height: 35px;
+      font-weight: 300;
+      text-transform: uppercase; }
+      @media (max-width: 900px) {
+        .top_title_2 {
+          font-size: 20px; } }
+      @media (max-width: 600px) {
+        .top_title_2 {
+          font-size: 15px; } }
+    .top_title_bottom {
+      display: flex; }
+  .top_social {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 5%;
+    top: 45%;
+    height: 100%; }
+    @media (max-width: 800px) {
+      .top_social {
+        display: none; } }
+    .top_social__block {
+      z-index: 10; }
+
+.top_img {
+  margin-left: 20px;
+  width: calc(100% - 20px); }
+  .top_img__block_1 {
+    width: 40%;
+    border-left: 2px solid #959595;
+    border-bottom: 2px solid #959595;
+    box-sizing: border-box;
+    border-radius: 2px;
+    margin-top: 20px;
+    padding: 12px 0 33px 30px; }
+    .top_img__block_1 img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+
+.top_img__block_2 {
+  position: absolute;
+  width: 40%;
+  left: 40%;
+  margin: 20px 0 0 70px; }
+  .top_img__block_2_wrapper {
+    border: 1px solid #FFFFFF;
+    padding: 39px 36px 0 36px; }
+    @media (max-width: 900px) {
+      .top_img__block_2_wrapper {
+        padding: 20px 20px 0 20px; } }
+    @media (max-width: 600px) {
+      .top_img__block_2_wrapper {
+        padding: 10px 10px 0 10px; } }
+  .top_img__block_2 img {
+    margin-top: 15px;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 30px;
+    object-fit: cover;
+    border-bottom: 2px solid #959595; }
+
+.top_img__block_3 {
+  position: absolute;
+  width: 50%;
+  left: 45%;
+  margin: 20px 0 0 70px; }
+  .top_img__block_3_wrapper {
+    border: 1px solid #FFFFFF;
+    padding: 39px 36px 0 36px;
+    text-align: start; }
+    @media (max-width: 900px) {
+      .top_img__block_3_wrapper {
+        padding: 20px 20px 0 20px; } }
+    @media (max-width: 600px) {
+      .top_img__block_3_wrapper {
+        padding: 10px 10px 0 10px; } }
+    .top_img__block_3_wrapper .img1 {
+      margin-top: 15px;
+      width: 80%;
+      object-fit: cover; }
+    .top_img__block_3_wrapper .img2 {
+      margin-top: 15px;
+      width: 100%;
+      object-fit: cover; }
+
+.block__text {
+  max-width: 448px;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: 0 auto;
+  font-weight: 300; }
+  @media (max-width: 900px) {
+    .block__text {
+      font-size: 15px; } }
+  .block__text_2 {
+    margin-top: 30px;
+    width: 100%;
+    font-size: 20px;
+    line-height: 23px;
+    color: #1F1B20;
+    padding: 0 36px; }
+    @media (max-width: 900px) {
+      .block__text_2 {
+        font-size: 15px; } }
+
+.btn_wrapper {
+  margin-top: 40px; }
+
+
+
+/*# sourceMappingURL=index.css.map*/
