--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -94,24 +94,32 @@
                             Замовити проект
                         </a>
                     </div>
-                    <div class="top_img__block_3">
-                        <div class="top_img__block_3_wrapper">
-                            <img src="/static/source/img/portfolio/Rectangle 5.png" class="img1" alt="">
-                            <img src="/static/source/img/portfolio/Rectangle 41.png" class="img2" alt="">
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
     </section>
 
     <section>
-        <div class="block_img__item">
-            <img src="/static/source/img/portfolio/Rectangle 5 (1).png" alt="">
+        <div class="block_1">
+            <div class="block_1_wrapper">
+                <div class="block_img__item1">
+                    <img src="/static/source/img/portfolio/Rectangle 5 (1).png" alt="">
+                </div>
+                <div class="block_img__item1">
+                    <img src="/static/source/img/portfolio/Rectangle 40.png" alt="">
+                </div>
+            </div>
+            <div class="block_1_wrapper block_relative">
+                <div class="block_img__item2 img80">
+                    <img src="/static/source/img/portfolio/Rectangle 5.png" alt="">
+                </div>
+               
+                <div class="block_img__item2 img100">
+                    <img src="/static/source/img/portfolio/Rectangle 41.png" alt="">
+                </div>
+            </div>
         </div>
-        <div class="block_img__item">
-            <img src="/static/source/img/portfolio/Rectangle 40.png" alt="">
-        </div>
+        
         <div class="block_img">
             <div class="block_img__item">
                 <img src="/static/source/img/portfolio/Rectangle 35.png" alt="">
