--- a/static/development/components/common_componentc/top/index.scss
+++ b/static/development/components/common_componentc/top/index.scss
@@ -93,10 +93,20 @@
 }
 
 .top_img {
-    //display: flex;
+    @media (max-width: 700px) {
+        flex-direction: column;
+        margin-left: 0px;
+    }
+    display: flex;
     margin-left: 20px;
     width: calc(100% - 20px);
     &__block_1 {
+        @media (max-width: 800px) {
+            width: 50%;
+        }
+        @media (max-width: 700px) {
+            width: 100%;
+        }
         width: 40%;
         border-left: 2px solid #959595;
         border-bottom: 2px solid #959595;
@@ -113,20 +123,23 @@
 }
 
 .top_img__block_2 {
-    position: absolute;
+    @media (max-width: 800px) {
+        width: 50%;
+    }
+    @media (max-width: 700px) {
+        margin: 0px 0 0 0px;
+        width: 100%;
+    }
     width: 40%;
-    //top: -50%;
-    //top: -280px;
-    left: 40%;
-    margin: 20px 0 0 70px;
+    margin: -250px 0 0 70px;
 
     &_wrapper {
-        @media (max-width: 900px) {
-            padding: 20px 20px 0 20px;
-        }
-        @media (max-width: 600px) {
-            padding: 10px 10px 0 10px;
-        }
+        // @media (max-width: 900px) {
+        //     padding: 20px 20px 0 20px;
+        // }
+        // @media (max-width: 600px) {
+        //     padding: 10px 10px 0 10px;
+        // }
         border: 1px solid #FFFFFF;
         padding: 39px 36px 0 36px;
     }
@@ -174,6 +187,9 @@
 .block__text {
     @media (max-width: 900px) {
         font-size: 15px;
+    }
+    @media (max-width: 700px) {
+        color: black;
     }
     max-width: 448px;
     font-size: 20px;
