--- a/static/source/pages/design/index.css
+++ b/static/source/pages/design/index.css
@@ -1336,8 +1336,13 @@ input::-webkit-inner-spin-button {
       z-index: 10; }
 
 .top_img {
+  display: flex;
   margin-left: 20px;
   width: calc(100% - 20px); }
+  @media (max-width: 700px) {
+    .top_img {
+      flex-direction: column;
+      margin-left: 0px; } }
   .top_img__block_1 {
     width: 40%;
     border-left: 2px solid #959595;
@@ -1346,25 +1351,30 @@ input::-webkit-inner-spin-button {
     border-radius: 2px;
     margin-top: 20px;
     padding: 12px 0 33px 30px; }
+    @media (max-width: 800px) {
+      .top_img__block_1 {
+        width: 50%; } }
+    @media (max-width: 700px) {
+      .top_img__block_1 {
+        width: 100%; } }
     .top_img__block_1 img {
       width: 100%;
       height: 100%;
       object-fit: cover; }
 
 .top_img__block_2 {
-  position: absolute;
   width: 40%;
-  left: 40%;
-  margin: 20px 0 0 70px; }
+  margin: -250px 0 0 70px; }
+  @media (max-width: 800px) {
+    .top_img__block_2 {
+      width: 50%; } }
+  @media (max-width: 700px) {
+    .top_img__block_2 {
+      margin: 0px 0 0 0px;
+      width: 100%; } }
   .top_img__block_2_wrapper {
     border: 1px solid #FFFFFF;
     padding: 39px 36px 0 36px; }
-    @media (max-width: 900px) {
-      .top_img__block_2_wrapper {
-        padding: 20px 20px 0 20px; } }
-    @media (max-width: 600px) {
-      .top_img__block_2_wrapper {
-        padding: 10px 10px 0 10px; } }
   .top_img__block_2 img {
     margin-top: 15px;
     width: 100%;
@@ -1408,6 +1418,9 @@ input::-webkit-inner-spin-button {
   @media (max-width: 900px) {
     .block__text {
       font-size: 15px; } }
+  @media (max-width: 700px) {
+    .block__text {
+      color: black; } }
   .block__text_2 {
     margin-top: 30px;
     width: 100%;
