--- a/templates/architect.html
+++ b/templates/architect.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>architect</title>
     <link rel="stylesheet" href="/static/source/fonts/stylesheet.css">
+    <link rel="stylesheet" href="/static/source/lib/swiper/swiper.css">
     <link rel="stylesheet" href="/static/source/pages/architect/index.css">
 </head>
 <body>
@@ -72,9 +73,9 @@
             <div class="top_social__line top_social__line_2">
             </div>
         </div>
-        <div class="plans container">
-            <div class="plans_wrapper">
-                <div class="plans_card">
+        <div class="plans container swiper-container">
+            <div class="plans_wrapper swiper-wrapper">
+                <div class="plans_card swiper-slide">
                     <div class="plans_card__title">
                         Basic
                     </div>
@@ -106,7 +107,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="plans_card">
+                <div class="plans_card swiper-slide">
                     <div class="plans_card__title">
                         Standart
                     </div>
@@ -135,7 +136,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="plans_card">
+                <div class="plans_card swiper-slide">
                     <div class="plans_card__title">
                         Premium
                     </div>
@@ -278,6 +279,7 @@
         </div>
     </footer>
 
+    <script src="/static/source/lib/swiper/swiper.js"></script>
     <script src="/static/source/pages/architect/index.js"></script>
     
 </body>
