--- a/static/development/components/common_componentc/plans/index.scss
+++ b/static/development/components/common_componentc/plans/index.scss
@@ -1,34 +1,41 @@
 .plans {
-    @media (max-width: 800px) {
-        margin-top: 0px;
+    @media (max-width: 992px) {
+        margin-top: 70px;
     }
-    display: flex; 
+    // @media (max-width: 800px) {
+    //     margin-top: 0px;
+    // }
+    //display: flex; 
     margin-top: 100px;
+    height: 100%;
     &_wrapper {
         @media (max-width: 800px) {
             margin-left: 0px;
             width: 100%;
         }
         display: flex;
-        justify-content: space-around;
-        align-items: stretch;
-        flex-wrap: wrap;
+        //justify-content: space-around;
+        //align-items: stretch;
+        //flex-wrap: wrap;
         //margin-top: 100px;
         margin-left: 70px;
-        width: calc(100% - 70px);
+        //width: calc(100% - 70px);
         height: 100%;
     }
     &_card {
-        @media (max-width: 1300px) {
-            width: 45%;
-            margin-bottom: 120px;
-        }
-        @media (max-width: 800px) {
-            width: 100%;
-        }
-        width: 30%;
-        height: auto;
+        // @media (max-width: 1300px) {
+        //     width: 45%;
+        //     margin-bottom: 120px;
+        // }
+        // @media (max-width: 800px) {
+        //     width: 100%;
+        // }
+        //width: 30%;
+        height: 100%;
         &__title {
+            @media (max-width: 992px) {
+                margin-bottom: 10px;
+            }
             font-size: 30px;
             line-height: 35px;
             text-transform: uppercase;
@@ -38,15 +45,22 @@
             text-align: center;
         }
         &_wrapper {
-            height: 88%;
+            @media (max-width: 992px) {
+                //height: 50%;
+                padding: 5%;
+            }
+            @media (max-width: 500px) {
+                padding: 0%;
+            }
+            height: 75%;
             padding: 15%;
             // padding-bottom: 10px;
             background: rgba(0, 0, 0, 0.6);
             border: 1px solid #FFFFFF;
             box-sizing: border-box;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: space-between;
         }
         &_services {
             li {
@@ -67,6 +81,10 @@
             text-align: center;
         }
         &__btn {
+            @media (max-width: 992px) {
+                //margin-top: 100px;
+                margin-top: 30px;
+            }
             margin-top: 50px;
             text-align: center;
         }
