--- a/static/development/components/common_componentc/top/index.scss
+++ b/static/development/components/common_componentc/top/index.scss
@@ -2,11 +2,14 @@
     @media (max-width: 992px) {
         height: 550px
     }
+    // @media (max-width: 700px) {
+    //     height: 350px
+    // }
     width: 100%;
     position: relative;
     height: 750px;
     &_title {
-        @media (max-width: 1200px) {
+        @media (max-width: 1400px) {
             left: 20%;
         }
         @media (max-width: 992px) {
