--- a/static/source/pages/index/index.css
+++ b/static/source/pages/index/index.css
@@ -1279,7 +1279,7 @@ input::-webkit-inner-spin-button {
     position: absolute;
     top: 300px;
     left: 30%; }
-    @media (max-width: 1200px) {
+    @media (max-width: 1400px) {
       .top_title {
         left: 20%; } }
     @media (max-width: 992px) {
@@ -1444,16 +1444,9 @@ input::-webkit-inner-spin-button {
   font-weight: 500;
   text-align: center; }
 
-.steps_wrapper {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap; }
-  @media (max-width: 1100px) {
-    .steps_wrapper {
-      justify-content: center; } }
-
 .steps_item {
   width: 23%;
+  height: auto;
   padding: 25px;
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.15);
@@ -1500,7 +1493,8 @@ input::-webkit-inner-spin-button {
       .steps_btn .steps_btn__block {
         margin-bottom: 50px; } }
   .steps_btn .steps_btn__block {
-    margin-right: 15px; }
+    margin-right: 15px;
+    height: 60px; }
   .steps_btn .portfolio__btn a {
     background: #FFFFFF;
     box-shadow: 0px 10px 20px rgba(242, 201, 76, 0.2);
