--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -80,24 +80,40 @@
         <div class="top_title">
             <div class="top_title_wrapper">
                 <div class="top_title_1">
-                    <span>
-                        Архітектура
-                    </span>
                     <img src="/static/source/img/index/Rectangle 4.svg" alt="">
-                </div>
-                <div class="top_title_2">
-                    - це мистецтво, нічого більше
+                    <span>
+                        НАШІ КОНТАКТИ
+                    </span>
                 </div>
                 <div class="top_title_bottom">
-                    <div class="btn_wrapper">
-                        <a href="#" class="btn_standart">
-                            Замовити проект
-                        </a>
-                    </div>
+                    
                     <div class="top_img__block_3">
                         
                     </div>
                 </div>
+            </div>
+            <div class="contact-us">
+                <form action="">
+                    <div class="input_section"> 
+                        <label for="" class="input_section__title">
+                            Ім’я *
+                        </label>
+                        <input type="text">
+                    </div>
+                    <div class="input_section">
+                        <label for="" class="input_section__title">
+                            E-mail *
+                        </label>
+                        <input type="email">
+                    </div>
+                    <div class="input_section">
+                        <label for="" class="input_section__title">
+                            Телефон *
+                        </label>
+                        <input type="text">
+                    </div>
+                    <input type="submit" class="btn_standart" value="Зв’язатися з нами">
+                </form>
             </div>
         </div>
     </section>
