--- a/templates/team.html
+++ b/templates/team.html
@@ -55,59 +55,121 @@
         </div>
     </header>
 
-    <section class="team first_padding"> 
-        <div class="top">
-            <div class="top_title" style="background: url(/static/source/img/team/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
-                <div class="top_social">
-                    <div class="top_social__line top_social__line_1">
-                    </div>
-                    <div class="top_social__block">
-                        <a href="#">
-                            <img src="/static/source/img/index/Frame 15.svg" alt="">
-                        </a>
-                    </div>
-                    <div class="top_social__block">
-                        <a href="#">
-                            <img src="/static/source/img/index/Frame 14.svg" alt="">
-                        </a>
-                    </div>
-                    <div class="top_social__line top_social__line_2">
-                    </div>
-                </div>
-                <div class="top_title_wrapper">
-                    <div class="top_title_1-white">
-                        <img src="/static/source/img/index/Rectangle 4.svg" alt="">
-                        <span>
-                            Наша команда
-                        </span>
-                    </div>
-                </div>
+    <section class="top first_padding" style="background: url(/static/source/img/team/Rectangle\ 2.png) 100% 100% no-repeat; background-size: cover;">
+        <div class="top_social">
+            <div class="top_social__line top_social__line_1">
             </div>
-            <div class="top_img container">
-                <div style="position: relative; top: -150px;">
-                    <img src="/static/source/img/team/Frame 72.png" alt="">
-                    <div>
-                        <img src="/static/source/img/index/Rectangle 4.svg" alt="">
-                        <span>
-                            Вікторія Циганок
-                        </span>
-                    </div>
-                    <div>
-                        Дизайнерка
-                    </div>
-                </div>
-                <div class="top_img__block_2">
-                    <div class="top_img__block_2_wrapper">
-                        <img src="/static/source/img/team/Rectangle 5.png" alt="">
-                    </div>
-                    <div class="block__text_2">
-                        Творча, життєрадісна, добра.
-                        Обожнює читати романи та у вільний час дивитись 
-                        художні фільми та цікавиться культурою країн Ближнього Сходу.
-                    </div>
+            <div class="top_social__block">
+                <a href="#">
+                    <img src="/static/source/img/index/Frame 15.svg" alt="">
+                </a>
+            </div>
+            <div class="top_social__block">
+                <a href="#">
+                    <img src="/static/source/img/index/Frame 14.svg" alt="">
+                </a>
+            </div>
+            <div class="top_social__line top_social__line_2">
+            </div>
+        </div>
+        <div class="top_title">
+            <div class="top_title_wrapper">
+                <div class="top_title_1-white">
+                    <img src="/static/source/img/index/Rectangle 4.svg" alt="">
+                    <span>
+                        Наша команда
+                    </span>
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="">
+        <div class="team_block container section_first">
+            <div class="team_block__item">
+                <div class="block_img" style="background: url(/static/source/img/team/Rectangle\ 7.png) bottom no-repeat;">
+                    <img src="/static/source/img/team/Frame 72.png" alt="">
+                </div>
+                
+                <div>
+                    <img src="/static/source/img/index/Rectangle 4.svg" alt="">
+                    <span>
+                        Вікторія Циганок
+                    </span>
+                </div>
+                <div>
+                    Дизайнерка
+                </div>
+            </div>
+            <div class="team_block__item block_2">
+                <div class="top_img__block_2_wrapper block_img">
+                    <img src="/static/source/img/team/Rectangle 5.png" alt="">
+                </div>
+                <div class="block__text_2">
+                    Творча, життєрадісна, добра.
+                    Обожнює читати романи та у вільний час дивитись 
+                    художні фільми та цікавиться культурою країн Ближнього Сходу.
+                </div>
+            </div>
+        </div>
+    
+        <div class="team_block container section_black">
+            <div class="team_block__item block_2">
+                <div class="top_img__block_2_wrapper block_img">
+                    <img src="/static/source/img/team/Rectangle 11.png" alt="">
+                </div>
+                <div class="block__text_2">
+                    Стримана, оригінальна, весела.
+                    Документальні фільми, посиденьки із друзями та робота 24/7 -  
+                    те, без чого не може уявити й дня наша архітекторка.
+                </div>
+            </div>
+            <div class="team_block__item">
+                <div class="block_img" style="background: url(/static/source/img/team/Rectangle\ 7.png) bottom no-repeat;">
+                    <img src="/static/source/img/team/Frame 89.png" alt="">
+                </div>
+                
+                <div>
+                    <img src="/static/source/img/index/Rectangle 4.svg" alt="">
+                    <span>
+                        Оксана Сакаль
+                    </span>
+                </div>
+                <div>
+                    Архітекторка
+                </div>
+            </div>
+        </div>
+
+        <div class="team_block container">
+            <div class="team_block__item">
+                <div class="block_img" style="background: url(/static/source/img/team/Rectangle\ 7.png) bottom no-repeat;">
+                    <img src="/static/source/img/team/Frame 72 (1).png" alt="">
+                </div>
+                
+                <div>
+                    <img src="/static/source/img/index/Rectangle 4.svg" alt="">
+                    <span>
+                        Юлія Венгер
+                    </span>
+                </div>
+                <div>
+                    Менеджерка 
+                    по комунікації з клієнтами
+                </div>
+            </div>
+            <div class="team_block__item block_2">
+                <div class="top_img__block_2_wrapper block_img">
+                    <img src="/static/source/img/team/Rectangle 5 (1).png" alt="">
+                </div>
+                <div class="block__text_2">
+                    Комунікабельна, щира та пунктуальна.
+                    За освітою Юля - викладачка географії, яка обожнює подорожі та знайрмства із новими людьми. 
+                    Саме тому наша менеджерка вважає, що їй дуже пощастило із роботою.
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <footer class="footer">
