--- a/static/development/components/module/modal_script/index.scss
+++ b/static/development/components/module/modal_script/index.scss
@@ -154,15 +154,16 @@
     &__title {
         color: #333333;
         font-size: 14px;
-        margin: 0 0 5px 25px;
+        //margin: 0 0 5px 25px;
     }
     input {
         width: 100%;
         border: 1px solid #E0E0E0;
-        border-radius: 8px;
+        //border-radius: 8px;
         box-sizing: border-box;
         height: 48px;
         padding: 15px 24px;
+        color: #333333;
     }
     textarea {
         width: 100%;
