--- a/static/development/components/pages/team/index.scss
+++ b/static/development/components/pages/team/index.scss
@@ -1,10 +1,63 @@
-.top {
-    &_title {
-        position: relative;
-        &_wrapper {
-            position: absolute;
-            top: 20px;
-            right: 0;
+// .top {
+//     &_title {
+//         position: relative;
+//         &_wrapper {
+//             position: absolute;
+//             top: 20px;
+//             right: 0;
+//         }
+//     }
+// }
+
+.team_block {
+    // @media (max-width: 992px) {
+    //     margin-top: -200px;
+    //     .team_block__item {
+    //         width: 50%;
+    //     }
+    // }
+    display: flex;
+    flex-wrap: wrap;
+    //margin-top: -400px;
+    &__item {
+        @media (max-width: 992px) {
+            padding: 10px;
+        }
+        @media (max-width: 700px) {
+            width: 100%;
+        }
+        width: 50%;
+        padding: 50px;
+        text-align: center;
+        .block_img {
+
+            img {
+                width: 100%;
+                max-height: 600px;
+                object-fit: contain;
+            }
         }
     }
+    .block_2 {
+        text-align: left;
+        padding-top: 100px;
+    }
 }
+
+.top_title {
+    top: 100px;
+}
+
+.section {
+    &_black {
+        background: linear-gradient( #1F1B20 60%, white 40%);
+    }
+    &_first {
+        @media (max-width: 992px) {
+            margin-top: -250px;
+        }
+        margin-top: -450px;
+    }
+}
+
+
