--- a/static/source/pages/portfolio/index.css
+++ b/static/source/pages/portfolio/index.css
@@ -971,15 +971,14 @@ input::-webkit-inner-spin-button {
   margin-bottom: 30px; }
   .input_section__title {
     color: #333333;
-    font-size: 14px;
-    margin: 0 0 5px 25px; }
+    font-size: 14px; }
   .input_section input {
     width: 100%;
     border: 1px solid #E0E0E0;
-    border-radius: 8px;
     box-sizing: border-box;
     height: 48px;
-    padding: 15px 24px; }
+    padding: 15px 24px;
+    color: #333333; }
   .input_section textarea {
     width: 100%;
     border: 1px solid #F2F2F2;
